# Viewets_and_generics

./: .env.sample  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: data_materials.json  data_users.json
materials/: admin.py  models.py  paginators.py  serializer.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscraption.py  0004_rename_subscraption_subscription.py
users/: admin.py  models.py  permissions.py  serializer.py  services.py  urls.py  views.py
users/management/commands/: create_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_link.py
